third_party/move/move-compiler-v2/tests/ability-check/typing/eq_invalid.exp

Diagnostics:
error: cannot use `u128` with an operator which expects a value of type `u8`
   ┌─ tests/ability-check/typing/eq_invalid.move:13:21
   │
13 │         (0: u8) == (1: u128);
   │                     ^

error: cannot use `bool` with an operator which expects a value of type `integer`
   ┌─ tests/ability-check/typing/eq_invalid.move:14:14
   │
14 │         0 == false;
   │              ^^^^^

error: reference type `&integer` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/eq_invalid.move:15:12
   │
15 │         &0 == 1;
   │            ^^
   │
   = required by instantiating type parameter `T` of function `==`

error: cannot use `&integer` with an operator which expects a value of type `integer`
   ┌─ tests/ability-check/typing/eq_invalid.move:16:14
   │
16 │         1 == &0;
   │              ^^

error: cannot use `&S` with an operator which expects a value of type `S`
   ┌─ tests/ability-check/typing/eq_invalid.move:17:14
   │
17 │         s == s_ref;
   │              ^^^^^

error: reference type `&mut S` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/eq_invalid.move:18:15
   │
18 │         s_mut == s;
   │               ^^
   │
   = required by instantiating type parameter `T` of function `==`

error: unable to infer instantiation of type `G2<_>` (consider providing type arguments or annotating the type)
   ┌─ tests/ability-check/typing/eq_invalid.move:28:9
   │
28 │         G2{} == G2{};
   │         ^^^^

error: tuple type `()` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/eq_invalid.move:33:12
   │
33 │         () == ();
   │            ^^
   │
   = required by instantiating type parameter `T` of function `==`

error: tuple type `(integer, integer)` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/eq_invalid.move:34:16
   │
34 │         (0, 1) == (0, 1);
   │                ^^
   │
   = required by instantiating type parameter `T` of function `==`

error: tuple type `(integer, integer, integer)` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/eq_invalid.move:35:19
   │
35 │         (1, 2, 3) == (0, 1);
   │                   ^^
   │
   = required by instantiating type parameter `T` of function `==`

error: tuple type `(integer, integer)` is not allowed as a type argument (type was inferred)
   ┌─ tests/ability-check/typing/eq_invalid.move:36:16
   │
36 │         (0, 1) == (1, 2, 3);
   │                ^^
   │
   = required by instantiating type parameter `T` of function `==`
